--- a/imooc/src/index.css
+++ b/imooc/src/index.css
@@ -2,3 +2,18 @@
     color:red;
     padding:10px;
 }
+.am-tab-bar{
+    position: fixed;
+    bottom:0;
+    left:0;
+    right:0;
+    height:90px;
+}
+.fixed-header.am-navbar{
+    position:fixed;
+    top:0;
+    width:100%;
+}
+.page-content{
+    padding:45px 5px;
+}
