--- a/imooc/src/index.css
+++ b/imooc/src/index.css
@@ -8,12 +8,48 @@
     left:0;
     right:0;
     height:90px;
+    z-index: 99;
 }
 .fixed-header.am-navbar{
     position:fixed;
     top:0;
     width:100%;
+    z-index: 99;
+}
+.am-navbar{
+    position:fixed;
+    top:0;
+    width:100%;
+    z-index: 99;
 }
 .page-content{
     padding:45px 5px;
 }
+#chat-page{
+    padding-bottom: 45px;
+}
+#chat-page .chat-me .am-list-extra{
+    flex-basis:auto;
+
+}
+#chat-page .chat-me .am-list-content{
+    padding-right: 15px;
+    text-align: right;
+}
+#chat-page .am-grid-icon{
+    display: none;
+}
+#chat-page .am-grid-text{
+    margin-top:0;
+}
+.stick-footer{
+    z-index: 10;
+    position: fixed;
+    bottom:0;
+    left:0;
+    right:0;
+    /*height:90px;*/
+
+}
+
+* { touch-action: pan-y; }
